# news-extractor

./: .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  RESEARCH.md  backlog.jsonl  pyproject.toml  requirements.txt
archive/legacy_research/analysis/: ORGANIZATION_SUMMARY.md  analysis_report_newspaper4k_vs_trafilatura.md  analysis_summary_quick_reference.txt  article-extraction-research-2025.md  newspaper4k_customization_findings.md  newspaper4k_extraction_findings.md
archive/legacy_research/docs/: ALL_SCRAPING_APPROACHES.md  COMPARISON_REPORT.md  NEXT_STEPS.md  README.md  SMART_SCRAPING_APPROACHES.md  TURKISH_NEWS_SOURCES.md
archive/legacy_research/experiments/: README.md
archive/legacy_research/experiments/01_manual_scrapers/: hurriyet_article_scraper.py  hurriyet_full_scraper.py  hurriyet_scraper.py  odatv_inspector.py  odatv_scraper.py  test_trafilatura_links.py
archive/legacy_research/experiments/results/: article_20251106_201935.json  article_20251106_202002.json  hurriyet_full_20251106_202358.json  hurriyet_news_20251106_201545.json  odatv_full_20251106_202825.json  odatv_full_20251106_203441.json  smart_scrape_results_20251107_001645.json
archive/legacy_research/production/: README.md  discover_articles.py  reliable_discovery.py  smart_scraper_demo.py
archive/legacy_research/scripts/: test_reliable_discovery_detail.py
archive/legacy_research/tests/research_archive/: article_discovery_20251107_014805.json  compare_content_quality.py  compare_crawl4ai_best.py  debug_discovery.py  (+23 more)
examples/: backlog_viewer.html  batch_extraction.py  scrape_news_gatherer_backlog.py  view_jsonl.py
src/haberin_dibi/: __init__.py  article_extractor.py
src/news_extractor/: __init__.py  article_extractor.py  backlog.py  cli.py
tests/validation/: compare_with_jina.py  test_ultimate_combo.py
(+20 files in other folders)
